--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "lint": "next lint"
   },
   "keywords": [],
   "author": "",
@@ -16,8 +17,13 @@
     "react-modal": "^3.16.3"
   },
   "devDependencies": {
+    "@types/node": "^22.12.0",
+    "@types/react": "^19.0.8",
     "autoprefixer": "^10.4.20",
+    "eslint": "9.19.0",
+    "eslint-config-next": "15.1.6",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3"
   }
 }
