--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.9",
     "next": "^15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-modal": "^3.16.3"
+    "react-modal": "^3.16.3",
+    "react-promise-tracker": "^2.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.12.0",
