--- a/backend/package.json
+++ b/backend/package.json
@@ -24,10 +24,13 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-express": "^11.0.11",
     "@nestjs/typeorm": "^11.0.0",
     "@types/cors": "^2.8.17",
+    "axios": "^1.8.1",
     "cors": "^2.8.5",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.13.1",
@@ -46,6 +49,7 @@
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.7",
     "@types/passport": "^1.0.17",
     "@types/passport-local": "^1.0.38",
